# dotmd

./: .editorconfig  .env.example  .gitignore  .mcp.json  AGENTS.md  Justfile  README.md  docker-compose.yml  justfile
backend/: Dockerfile  pyproject.toml  start.sh  visualize_graph.py
backend/benchmarks/: bench_gliner_batching.py  bench_tei_concurrency.py
backend/devtools/: crap_ratchet.py  mcp_remote_smoke.py  pyright-baseline.json  pyright_ratchet.py  reranker_latency_bench.py  reranker_quality_bench.py  surreal_completeness_audit.py  surreal_embedding_backfill.py  surreal_embedding_shard_runner.py  surreal_eval_runner.py  surreal_falkor_migration_runner.py  surreal_fts_gate.py  surreal_golden_queries.jsonl  surreal_golden_queries_review.md  surreal_hnsw_diagnostics.py  surreal_index_build_runner.py  surreal_knn_gate.py  surreal_migration_runner.py  surreal_operational_probe.py  surreal_shadow_runner.py  surreal_source_export_runner.py  surreal_sqlite_migration_runner.py  surreal_sqlite_source_probe.py  surreal_sqlite_subset_export.py  surreal_standalone_migration_proof.py  surreal_standalone_schema_apply.py  surreal_standalone_smoke.py
backend/devtools/mcp_client/: README.md  cli.py  client.py  smoke.json
backend/eval/: __main__.py
backend/reports/: crap-baseline.json
backend/scripts/: eval_baseline.py  eval_compare.py
backend/src/dotmd/: auth.py  cli.py  feedback.py  mcp_server.py
backend/src/dotmd/api/: server.py  service.py  types.py
backend/src/dotmd/core/: config.py  exceptions.py  models.py  source_registry.py
backend/src/dotmd/extraction/: keyterms.py  ner.py  structural.py
backend/src/dotmd/ingestion/: chunker.py  cleanup_v15_pre.py  content_handlers.py  file_tracker.py  gmail_provider.py  lock.py  migrate_fingerprints_to_blake3.py  migrate_surreal.py  migration.py  migration_v15.py  migration_v16.py  pipeline.py  reader.py  source.py  source_lifecycle.py  source_provider.py  source_registry.py  surreal_delta_sync.py  surreal_direct_sink.py  surreal_sqlite_snapshot.py  telegram_provider.py  trickle.py
backend/src/dotmd/search/: base.py  bm25.py  federated.py  fts5.py  fusion.py  graph_direct.py  graph_search.py  query.py  reranker.py  semantic.py  surreal_contract.py  surreal_eval.py  surreal_fts.py  surreal_graph.py  surreal_native.py  surreal_parity.py  surreal_shadow_metrics.py  surreal_vector.py
backend/src/dotmd/storage/: base.py  cache.py  falkordb_graph.py  graph.py  metadata.py  (+8 more)
backend/tests/: conftest.py  test_auth.py  test_cli.py  test_crap_ratchet.py  test_diff_reporting.py  test_federated.py  test_file_tracker.py  test_fixture_fidelity.py  test_fusion.py  test_gmail_bridge.py  test_graph_delete.py  test_graph_search.py  test_hybrid_bm25.py  test_incremental_pipeline.py  test_mcp_access_log.py  test_metadata_delete.py  test_reranker.py  test_service_force.py  test_telegram_sync.py  test_vector_delete.py  test_vendor_airweave_import.py
backend/tests/api/: test_lifecycle_bundles_built_once.py  test_phase34_gaps.py  test_search_parity.py  test_search_result_shape.py  test_service_reindex_surreal.py  test_service_search.py  test_telegram_federated_read.py
backend/tests/cli/: test_migrate_cli.py  test_search_output.py  test_status_output.py
backend/tests/core/: test_config_base_url.py  test_config_separation.py  test_search_candidate.py  test_surreal_search_config.py
backend/tests/devtools/: test_pyright_ratchet.py  test_reranker_latency_bench.py  test_reranker_quality_bench.py  test_surreal_completeness_audit.py  test_surreal_embedding_backfill.py  test_surreal_embedding_shard_runner.py  test_surreal_eval_runner.py  test_surreal_falkor_migration_runner.py  test_surreal_fts_gate.py  test_surreal_index_build_runner.py  test_surreal_knn_gate.py  test_surreal_migration_runner.py  test_surreal_operational_probe.py  test_surreal_shadow_runner.py  test_surreal_source_export_runner.py  test_surreal_sqlite_migration_runner.py  test_surreal_sqlite_source_probe.py  test_surreal_standalone_migration_proof.py  test_surreal_standalone_schema_apply.py  test_surreal_standalone_smoke.py
backend/tests/e2e/: conftest.py  pytest.ini  test_mcp_smoke.py
backend/tests/extraction/: test_ner_split.py
backend/tests/fixtures/: schema_pre_v16.sql  schema_pre_v16.sqlite.dump  surreal_native.py
backend/tests/ingestion/: application_source_fixtures.py  test_application_source_ingestion.py  test_application_source_provider.py  test_bulk_fusion_pairing.py  test_chunker.py  test_federated_read_routing.py  test_meta_checksum.py  test_metadata_only_reindex.py  test_migration_v15_superseded.py  test_migration_v16.py  test_migration_v16_invariants.py  test_migration_v16_ops.py  test_migration_v16_progress.py  test_pipeline_m2m_insert.py  test_pipeline_metadata.py  test_pipeline_orphan_sweep.py  test_pipeline_purge.py  test_pipeline_reindex_shared_chunk.py  test_pipeline_surreal_direct_init.py  test_pipeline_surreal_guards.py  test_source_filesystem.py  test_source_lifecycle.py  test_source_registry.py  test_surreal_delta_sync.py  test_surreal_delta_sync_live.py  test_surreal_direct_sink.py  test_surreal_production_migration.py  test_surreal_transform_only_migration.py  test_telegram_ingestion.py  test_telegram_provider.py  test_trickle_lock.py  test_trickle_metrics.py
backend/tests/mcp/: test_mcp_search_envelope.py  test_search_tool.py
backend/tests/search/: conftest.py  test_falkordb_graph_name_config.py  test_federated.py  test_surreal_contract.py  test_surreal_direct_visibility.py  test_surreal_eval.py  test_surreal_fts.py  test_surreal_native_fts.py  test_surreal_native_graph.py  test_surreal_native_hybrid.py  test_surreal_native_vector.py  test_surreal_retrieval_parity.py  test_surreal_shadow_metrics.py
backend/tests/smoke/: conftest.py  pytest.ini  test_api.py  test_hybrid_fusion.py  test_search_engines.py
backend/tests/storage/: test_cache.py  test_falkordb_graph.py  test_metadata_m2m.py  test_surreal_ops_safety.py  test_surreal_schema_definition.py  test_surreal_standalone_connection.py  test_surreal_storage_contract.py  test_vec_components.py
(+731 files in other folders)
