[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotmd"
version = "0.1.0"
description = "Markdown knowledgebase search tool with semantic, keyword, and graph-based retrieval"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "real_ladybug>=0.1",
    "FalkorDB>=1.6.0",
    "gliner>=0.2",
    "pydantic>=2.0",
    "pydantic-settings[toml]>=2.0",
    "watchdog>=6.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
lancedb = [
    "lancedb>=0.6",
]
eval = [
    "openai>=1.0",
    "tqdm>=4.60",
]

[project.scripts]
dotmd = "dotmd.cli:main"

[tool.pytest.ini_options]
markers = [
    "smoke: smoke tests requiring a running dotMD stack",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dotmd"]
sources = ["src"]
