[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotmd"
version = "0.1.0"
description = "Markdown knowledgebase search tool with semantic, keyword, and graph-based retrieval"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0",
    "click>=8.0",
    "sentence-transformers>=3.0",
    "transformers>=4.45,<5",
    "torch<2.5",
    "einops>=0.8",
    "sqlite-vec>=0.1.6",
    "real_ladybug>=0.1",
    "FalkorDB>=1.6.0",
    "gliner>=0.2",
    "pydantic>=2.0",
    "pydantic-settings[toml]>=2.0",
    "watchdog>=6.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "modal>=0.73",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
lancedb = [
    "lancedb>=0.6",
]

[project.scripts]
dotmd = "dotmd.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
markers = [
    "smoke: smoke tests requiring a running dotMD stack",
    "e2e: E2E tests against the live MCP HTTP server (run inside container)",
    "real_semantic_encode_batch: opt out of _mock_semantic_engine autouse fixture",
    "real_schema_check: opt out of _mock_schema_version_check autouse fixture",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dotmd"]
sources = ["src"]

# ---------------------------------------------------------------------------
# Linting (ruff) — formatting + lint
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "devtools"]
extend-exclude = [".venv", "build", "dist", "**/__pycache__"]

[tool.ruff.lint]
# Conservative-but-useful rule selection.  Adds bug-catchers (B, F, RUF, SIM,
# UP, C4) on top of the pycodestyle/pyflakes baseline.  Naming (N) is on, but
# we explicitly opt out of N802/N803/N806 because PascalCase MCP tool names
# and the underscore-prefixed kwargs FastMCP picks up are intentional.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # import sort
    "B",      # bugbear
    "C4",     # comprehensions
    "SIM",    # simplify
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line-too-long handled by formatter / context
    "B008",   # default arg with function call (FastAPI/click rely on this)
    "N802",   # snake_case override — MCP tool fns intentionally lowercase
    "N803",   # snake_case argument names
    "N806",   # variable lowercase rule clashes with Pydantic Field-style names
    "SIM108", # ternary not always clearer
    "RUF002", # ambiguous-unicode in docstrings — Russian text is intentional
    "RUF003", # ambiguous-unicode in comments — Russian text is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # asserts in tests are fine
    "B017",   # broad except in tests is sometimes intentional
]
"src/dotmd/cli.py" = ["E402"]  # late imports are fine in click commands

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Type checking (pyright)
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests", "devtools"]
exclude = ["**/__pycache__", "**/.venv", "build", "dist"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
