[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotmd"
version = "0.1.0"
description = "Markdown knowledgebase search tool with semantic, keyword, and graph-based retrieval"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.9",
    "click>=8.4.2",
    "sqlite-vec>=0.1.6",
    "pydantic>=2.0",
    "pydantic-settings[toml]>=2.14.2",
    "watchdog>=6.0",
    "pyyaml>=6.0",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "mcp[cli]>=1.27.2",
    "httpx>=0.27",
    "modal>=1.5.1",
    "surrealdb>=2.0.0",
]

[project.optional-dependencies]
local-ml = [
    "sentence-transformers>=5.6.0",
    "gliner>=0.2",
    "torch>=2.12,<2.13",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7",
    "pytest-crap>=0.3.0",
    "ruff>=0.15.20",
    "basedpyright>=1.39.8",
    "import-linter>=2.12",
    "vulture>=2.16",
    "radon>=6.0.1",
    "pytest-xdist>=3.8.0",
    "actionlint-py>=1.7.12.24",
]
[project.scripts]
dotmd = "dotmd.cli:main"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
# Leave no /tmp residue on green runs (shared host): passed tests' tmp_path dirs are
# removed at session end; only failing tests keep their dir, and only the latest run.
# Flip policy to "none" for zero retention even on failures.
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
testpaths = ["tests"]
addopts = "-x --tb=short"
asyncio_mode = "auto"
markers = [
    "smoke: smoke tests requiring a running dotMD stack",
    "e2e: E2E tests against the live MCP HTTP server (run inside container)",
    "real_semantic_encode_batch: opt out of _mock_semantic_engine autouse fixture",
    "real_schema_check: opt out of _mock_schema_version_check autouse fixture",
    "asyncio: marks async test functions for pytest-asyncio",
]

[tool.coverage.run]
source = ["src/dotmd"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.hatch.build.targets.wheel]
packages = ["src/dotmd"]
sources = ["src"]

# ---------------------------------------------------------------------------
# Linting (ruff) — formatting + lint
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "devtools"]
extend-exclude = [".venv", "build", "dist", "**/__pycache__"]

[tool.ruff.lint]
# Conservative-but-useful rule selection.  Adds bug-catchers (B, F, RUF, SIM,
# UP, C4) on top of the pycodestyle/pyflakes baseline.  Naming (N) is on, but
# we explicitly opt out of N802/N803/N806 because PascalCase MCP tool names
# and the underscore-prefixed kwargs FastMCP picks up are intentional.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # import sort
    "B",      # bugbear
    "C4",     # comprehensions
    "SIM",    # simplify
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line-too-long handled by formatter / context
    "B008",   # default arg with function call (FastAPI/click rely on this)
    "N802",   # snake_case override — MCP tool fns intentionally lowercase
    "N803",   # snake_case argument names
    "N806",   # variable lowercase rule clashes with Pydantic Field-style names
    "SIM108", # ternary not always clearer
    "RUF002", # ambiguous-unicode in docstrings — Russian text is intentional
    "RUF003", # ambiguous-unicode in comments — Russian text is intentional
]
allowed-confusables = [
    "а", # Telegram low-signal Russian words
    "г", # Telegram low-signal Russian words
    "у", # Telegram low-signal Russian words
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # asserts in tests are fine
    "B017",   # broad except in tests is sometimes intentional
]
"src/dotmd/cli.py" = ["E402"]  # late imports are fine in click commands
"src/dotmd/vendor/airweave/**/*.py" = [
    "G004",    # vendored code is kept close to Airweave's original style
    "PERF401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Type checking (pyright)
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests", "devtools"]
exclude = ["**/__pycache__", "**/.venv", "build", "dist"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.importlinter]
root_package = "dotmd"

[[tool.importlinter.contracts]]
name = "Core models and config stay independent of outer layers"
type = "forbidden"
source_modules = [
    "dotmd.core",
]
forbidden_modules = [
    "dotmd.api",
    "dotmd.ingestion",
    "dotmd.extraction",
    "dotmd.search",
    "dotmd.storage",
    "dotmd.vendor",
]

[[tool.importlinter.contracts]]
name = "Storage layer does not depend on API or ingestion orchestration"
type = "forbidden"
source_modules = [
    "dotmd.storage",
]
forbidden_modules = [
    "dotmd.api",
    "dotmd.ingestion",
]

[[tool.importlinter.contracts]]
name = "Search layer does not depend on API facade"
type = "forbidden"
source_modules = [
    "dotmd.search",
]
forbidden_modules = [
    "dotmd.api",
]

[[tool.importlinter.contracts]]
name = "Extraction layer does not depend on API or ingestion orchestration"
type = "forbidden"
source_modules = [
    "dotmd.extraction",
]
forbidden_modules = [
    "dotmd.api",
    "dotmd.ingestion",
]

[[tool.importlinter.contracts]]
name = "Utility helpers stay independent of domain layers"
type = "forbidden"
source_modules = [
    "dotmd.utils",
]
forbidden_modules = [
    "dotmd.api",
    "dotmd.ingestion",
    "dotmd.extraction",
    "dotmd.search",
    "dotmd.storage",
    "dotmd.vendor",
]

[[tool.importlinter.contracts]]
name = "Vendored platform slice stays independent of dotMD runtime"
type = "forbidden"
source_modules = [
    "dotmd.vendor",
]
forbidden_modules = [
    "dotmd.api",
    "dotmd.core",
    "dotmd.ingestion",
    "dotmd.extraction",
    "dotmd.search",
    "dotmd.storage",
    "dotmd.utils",
]
